# LegacyPlusPlus

./: CMakeLists.txt  README.md
src/: LPP.cpp
src/GUI/Screens/Edit/: EditScreen.cpp  EditScreen.h  FSEditScreen.cpp
src/GUI/Widgets/: FileListWidget.cpp  FileListWidget.h
